Add A2A dispute-filing agent and consolidate verticalslice docs
- infrastructure/a2a/ — new package:
  * DisputeAgentConfig: AgentCard + DefaultAgentExecutor + ChatClient,
    gated on spring.ai.a2a.server.enabled=true. Exposes
    GET /.well-known/agent-card.json and POST / (JSON-RPC sendMessage).
  * DisputeAgentTools: @Tool methods the agent's LLM picks from
    (listCalculations, getCalculation, createDispute, listDisputes, ...).
  * DisputeClient: A2A client over JSON-RPC; handles Message / Task /
    TaskUpdate events with a 180s terminal-state wait. No @Tool
    annotation — same-JVM tool scanners would recurse.
  * DisputeClientController: POST /a2a-client/send text/plain wrapper
    so callers can fire tasks without speaking JSON-RPC.
  * DisputeAgentCli: @EventListener(ApplicationReadyEvent) runner that
    fires once when a2a.client.cli.task is supplied — waits until
    DataInitializer has seeded the DB before calling.
- McpCommissionTools adds delegateToDisputeAgent MCP tool (via
  ObjectProvider<DisputeClient>) so Claude Desktop and other MCP
  clients can delegate to the A2A agent. Tool is only registered on
  the MCP server, not on the A2A ChatClient — no recursion.
- CommissionCalculatorApplication: drop AnthropicChatAutoConfiguration
  exclusion so ChatClient.Builder can be autoconfigured when the API
  key is set. Without it the A2A agent has no LLM.
- SecurityConfig: permit GET /.well-known/agent-card.json, POST /,
  POST /a2a-client/**, and add those paths to the CSRF ignore list.
- application.properties: spring.ai.mcp.server.stdio=false so
  Streamable HTTP at /mcp registers; spring.ai.a2a.server.enabled=true
  default; a2a.dispute-agent.url default. Anthropic key stays as
  ${ANTHROPIC_API_KEY:} (no hardcoded secrets).
- pom.xml: spring-ai-a2a-server-autoconfigure 0.2.0 +
  a2a-java-sdk-client 0.3.3.Final.
- README.md consolidated: merged MCP_INSPECTOR_SETUP.md and
  MCP_SERVER_SETUP.md into the module README, corrected port (8080 ->
  8081),